<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/card_view"
    android:layout_gravity="top|center"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="4dp"
    card_view:cardCornerRadius="3dp"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/patient_name"
            android:text="@string/patient_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="@color/ROSE"/>

        <TextView
            android:id="@+id/medicine"
            android:text="@string/medicine_used_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/appointment_date"
            android:text="@string/appointment_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/confirm_book"
                android:text="@string/confirm_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape5dp"
                android:textColor="@color/white"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/cancel_book"
                android:text="@string/cancel_booking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape5dp"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/delay"
                android:text="@string/delay_appointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_shape5dp"
                android:layout_marginLeft="5dp"
                android:textColor="@color/white"
                android:layout_weight="1"/>


        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>