<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/card_view"
    android:layout_gravity="top|center"
    card_view:cardUseCompatPadding="true"
    card_view:cardElevation="2dp"
    card_view:cardCornerRadius="2dp"
    app:cardBackgroundColor="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/doctor_name"
            android:text="@string/doctor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textSize="20sp"
            android:textColor="@color/ROSE"/>

        <TextView
            android:id="@+id/doctor_spec"
            android:text="@string/specialization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/doctor_address"
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/doctor_price"
            android:text="@string/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="8dp"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/book"
            android:text="@string/book"
            android:background="@drawable/btn_shape5dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="5dp"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.v7.widget.CardView>
