<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:clickable="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/doctor_nameText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:textSize="20sp"
                android:textColor="@color/ROSE"
                android:ems="10"
                android:id="@+id/doctor_name" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/specialization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/specializationText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specialization"
                android:ems="10"
                android:textSize="20dp"
                android:textColor="@color/ROSE"
                android:id="@+id/specialization" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/addressText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:ems="10"
                android:textSize="20dp"
                android:textColor="@color/ROSE"
                android:id="@+id/address" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:text="@string/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/priceText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:ems="10"
                android:textSize="20dp"
                android:textColor="@color/ROSE"
                android:id="@+id/price" />

        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/appointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appointment_dateText"
                android:textSize="20dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/appointment_date"
                android:ems="10"
                android:textSize="20dp"
                android:textColor="@color/ROSE"
                android:id="@+id/appointment_date" />
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <TextView
                android:text="@string/medicine_used_before"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/Medicine_usedTtext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicine_used_before"
                android:textSize="20dp"
                android:textColor="@color/ROSE"
                android:ems="10"
                android:id="@+id/Medicine_used" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/myBooking"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:text="@string/cancel_booking"
            android:id="@+id/cancel_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape5dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"/>

        <Button
            android:text="@string/edit_booking"
            android:id="@+id/edit_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_shape5dp"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textSize="15sp"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>