<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_book"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mahmoudheshmat.mahmoudheshmattask.bookActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/doctor_name"
                        android:text="@string/doctor_name"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/ROSE"/>

                    <TextView
                        android:id="@+id/doctor_spec"
                        android:text="@string/specialization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="8dp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/doctor_address"
                        android:text="@string/address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="8dp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/doctor_price"
                        android:text="@string/price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginLeft="8dp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/black"/>

                </LinearLayout>




            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/notes"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:textColor="@color/ROSE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:id="@+id/card_view"
                android:layout_gravity="top|center"
                card_view:cardUseCompatPadding="true"
                card_view:cardElevation="4dp"
                card_view:cardCornerRadius="3dp"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/white"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <TextView
                            android:id="@+id/choose_the_time"
                            android:text="@string/choose_the_time"
                            android:textSize="20sp"
                            android:layout_width="206dp"
                            android:layout_height="50dp"
                            android:gravity="center_vertical"
                            android:textColor="@color/black" />

                        <ImageView
                            android:src="@drawable/date"
                            android:layout_width="wrap_content"
                            android:layout_height="50dp" />

                    </LinearLayout>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:hint="@string/medicine_used_before"
                        android:id="@+id/medicine"
                        android:padding="10dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edittext_style"/>

                    <Button
                        android:onClick="book"
                        android:text="@string/book"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_shape5dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="60dp"
                        android:textSize="20sp"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>



        </LinearLayout>



    </FrameLayout>




</LinearLayout>
